# n_music

./: .gitignore  .nmusic.toml  Cargo.toml  LICENSE  README.md  dist-workspace.toml
.cargo/: config.toml
.github/workflows/: release.yml  rust.yml
n_audio/: Cargo.toml  README.md
n_audio/examples/: cli_player.rs
n_audio/src/: dca.rs  lib.rs  music_track.rs  opus.rs  output.rs  player.rs  queue.rs  raw.rs
n_player/: .gitignore  Cargo.toml  Dioxus.toml  build.gradle  build.rs  compile_rust.sh  compile_rust_release.sh  env.sh  gradle.properties  input.css  package-lock.json  package.json  settings.gradle  start_shell.sh
n_player/android/: build.gradle
n_player/android/src/main/: AndroidManifest.xml
n_player/android/src/main/java/com/enn3developer/n_music/: MainActivity.kt  MediaCallback.kt  PlaybackService.java
n_player/android/src/main/kotlin/com/enn3developer/n_music/: DummyService.kt  MainActivity.kt  NPlayer.kt  PlaybackService.kt
n_player/android/src/main/res/drawable/: ic_launcher_foreground.xml  ic_launcher_monochrome.xml  icon.xml
n_player/assets/lang/: ba_Barese.json  de_Deutsch.json  en_English.json  it_Italian.json  it_Italiano.json  n_player.pot  nap_Napulitan.json  uk_Українська.json  zh_Chinese.json
n_player/assets/lang/de/LC_MESSAGES/: de.mo  de.po
n_player/assets/lang/en/LC_MESSAGES/: n_player.mo  n_player.po
n_player/assets/lang/it/LC_MESSAGES/: n_player.mo  n_player.po
n_player/assets/lang/nap/LC_MESSAGES/: nap.mo  nap.po
n_player/assets/style/: tailwind.css
n_player/src/: app.rs  image.rs  lib.rs  localization.rs  main.rs  mpris_server.rs  platform.rs  runner.rs  settings.rs  storage.rs
n_player/src/app/: mod.rs
n_player/src/app/modules/: loader.rs  mod.rs  updater.rs  window.rs
n_player/src/bus_server/: linux.rs  mod.rs
n_player/src/ui/: app.rs  init_app.rs  mod.rs
n_player/src/ui/components/: bottom_bar.rs  button.rs  mod.rs  search.rs  topbar.rs  tracks.rs
n_player/src/ui/views/: home.rs  mod.rs  settings.rs
n_player/ui/: android_window.slint  app.slint  window.slint
n_player/ui/components/: control_panel.slint  separator.slint  setting.slint  top_panel.slint  track.slint
n_player/ui/data/: track_data.slint
n_player/ui/globals/: app_data.slint  localization.slint  settings_data.slint
n_player/ui/scenes/: app.slint  settings.slint
n_player/wix/: main.wxs
