[workspace]
resolver = "2"
members = [
    "n_player",
    "n_audio",
]

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"

[profile.dev.build-override]
opt-level = 3

[profile.release.build-override]
opt-level = 3
