[package]
name = "n_audio"
version = "2.0.0-alpha.6"
authors = ["Enn3Developer <arturpeshko39@gmail.com>"]
edition = "2021"
license = "GPL-3.0-only"
description = "Simple audio player"
homepage = "https://github.com/Enn3Developer/n_music"
repository = "https://github.com/Enn3Developer/n_music"
documentation = "https://docs.rs/crate/n_audio/1.1.0"
readme = "README.md"

[dev-dependencies]
nconsole = "0.5.0"

[dependencies]
symphonia = { version = "0.5.4", features = ["all"] }
symphonia-core = "0.5.4"
audiopus = "0.3.0-rc.0"
audiopus_sys = { version = "0.2.2", features = ["dynamic"] }
rand = "0.8.5"
once_cell = "1.20.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
rb = "0.4.1"
cpal = "0.15.3"
dasp = "0.11.0"
flume = "0.11.0"
tokio = { version = "1.40.0", features = ["macros", "rt", "rt-multi-thread", "fs", "sync"] }
tempfile = "3.13.0"
multitag = "0.3.1"
