[package]
name = "n_audio"
version = "2.0.0-alpha.8"
authors = ["Enn3Developer <arturpeshko39@gmail.com>"]
edition = "2021"
license = "GPL-3.0-only"
description = "Simple audio player"
homepage = "https://github.com/Enn3Developer/n_music"
repository = "https://github.com/Enn3Developer/n_music"
documentation = "https://docs.rs/crate/n_audio/1.1.0"
readme = "README.md"

[dev-dependencies]
nconsole = "0.5.0"

[dependencies]
symphonia = { version = "0.5", features = ["all"] }
symphonia-core = "0.5"
audiopus = { git = "https://github.com/Flakebi/audiopus.git", branch = "master" }
rand = "0.9"
once_cell = "1.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rb = "0.4"
cpal = "0.15"
dasp = "0.11"
flume = "0.11"
tokio = { version = "1.44", features = ["macros", "rt", "rt-multi-thread", "fs", "sync"] }
tempfile = "3.19"
multitag = "0.3"
