[package]
name = "n_player"
version = "1.9.0"
authors = ["Enn3Developer <arturpeshko39@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[build-dependencies]
slint-build = "1.8.0"

[dependencies]
slint = { version = "1.8.0", default-features = false, features = ["std", "compat-1-2", "backend-winit"] }
bitcode = { version = "0.6.3", features = ["derive"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
directories = "5.0.1"
n_audio = { path = "../n_audio" }
async-channel = "2.3.1"
flume = "0.11.0"
rayon = "1.10.0"
multitag = "0.3.1"
opusmeta = "1.1.0"
image = { version = "0.25", features = ["jpeg", "png", "ico", "webp", "avif", "bmp", "dds", "exr", "gif", "pnm", "tiff"] }
hashbrown = "0.15.0"
tempfile = "3.13.0"
tokio = { version = "1.40.0", features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
num_cpus = "1.16.0"
pollster = "0.3.0"
infer = { version = "0.16.0", default-features = false, features = ["std"] }
sys-locale = "0.3.1"
open = "5.3.0"

[target.'cfg(target_os = "linux")'.dependencies]
mpris-server = "0.8.1"

[target.'cfg(all(target_os = "macos", target_arch = "x86_64"))'.dependencies.slint]
version = "1.8.0"
default-features = false
features = ["renderer-femtovg"]

[target.'cfg(not(all(target_os = "macos", target_arch = "x86_64")))'.dependencies.slint]
version = "1.8.0"
default-features = false
features = ["renderer-skia"]

[target.'cfg(target_os = "android")'.dependencies.slint]
version = "1.8.0"
default-features = false
features = ["backend-android-activity-06"]

[target.'cfg(target_os = "android")'.dependencies]
ndk-context = "0.1.1"

[target.'cfg(not(target_os = "android"))'.dependencies]
rfd = "0.15.0"
