[package]
name = "n_player"
version = "1.9.0"
authors = ["Enn3Developer <arturpeshko39@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "cdylib"]

[build-dependencies]
slint-build = "1.8.0"

[dependencies]
slint = { version = "1.8.0", default-features = false, features = ["std", "compat-1-2", "backend-winit"] }
bitcode = { version = "0.6.3", features = ["derive"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
n_audio = { path = "../n_audio" }
flume = "0.11.0"
multitag = "0.3.1"
opusmeta = "1.1.0"
zune-image = { version = "0.5.0-rc0", default-features = false, features = ["png", "jpeg", "jpeg-xl", "simd", "bmp", "threads"] }
zune-imageprocs = { version = "0.5.0-rc0", features = ["portable-simd"] }
zune-core = { version = "0.5.0-rc2", default-features = false, features = ["std"] }
rimage = { version = "0.11.0-next.3", default-features = false, features = ["mozjpeg", "oxipng", "resize", "threads", "webp"] }
tempfile = "3.13.0"
tokio = { version = "1.40.0", features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
num_cpus = "1.16.0"
pollster = "0.3.0"
infer = { version = "0.16.0", default-features = false, features = ["std"] }
sys-locale = "0.3.1"
zstd = "0.13.2"

[target.'cfg(target_os = "linux")'.dependencies]
mpris-server = "0.8.1"

[target.'cfg(all(target_os = "macos", target_arch = "x86_64"))'.dependencies.slint]
version = "1.8.0"
default-features = false
features = ["renderer-femtovg"]

[target.'cfg(not(all(target_os = "macos", target_arch = "x86_64")))'.dependencies.slint]
version = "1.8.0"
default-features = false
features = ["renderer-skia"]

[target.'cfg(target_os = "android")'.dependencies.slint]
version = "1.8.0"
default-features = false
features = ["backend-android-activity-06"]

[target.'cfg(target_os = "android")'.dependencies]
ndk-context = "0.1.1"
jni = "0.21.1"
once_cell = "1.20.2"

[target.'cfg(not(target_os = "android"))'.dependencies]
rfd = "0.15.0"
directories = "5.0.1"
async-channel = "2.3.1"
open = "5.3.0"

[package.metadata.android]
package = "com.enn3developer.n_music"
apk_name = "N Music"
build_targets = ["aarch64-linux-android"]

[package.metadata.android.application]
label = "N Music"

[package.metadata.android.application.activity]
orientation = "portrait"

[[package.metadata.android.uses_permission]]
name = "android.permission.READ_EXTERNAL_STORAGE"

[[package.metadata.android.uses_permission]]
name = "android.permission.READ_MEDIA_AUDIO"

[[package.metadata.android.queries.intent]]
actions = ["android.intent.action.OPEN_DOCUMENT_TREE"]
