[package]
name = "n_player"
version = "2.0.0-alpha.6"
authors = ["Enn3Developer <arturpeshko39@gmail.com>"]
edition = "2021"
repository = "https://github.com/Enn3Developer/n_music"
description = "A simple music player written in Rust + Slint"

[package.metadata.wix]
upgrade-guid = "7CE90BCB-E720-41CF-AFED-DDB3B0AA49E2"
path-guid = "D9DF9822-756A-4015-85DD-99173166A5DC"
license = false
eula = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "cdylib"]

[build-dependencies]
slint-build = "1.8.0"

[dependencies]
slint = { version = "1.8.0", default-features = false, features = ["std", "compat-1-2", "backend-winit"] }
bitcode = { version = "0.6.3", features = ["derive"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
n_audio = { path = "../n_audio" }
flume = "0.11.0"
multitag = "0.3.1"
opusmeta = "1.1.0"
zune-image = { version = "0.5.0-rc0", default-features = false, features = ["png", "jpeg", "jpeg-xl", "bmp", "threads"] }
zune-imageprocs = "0.5.0-rc0"
zune-core = { version = "0.5.0-rc2", default-features = false, features = ["std"] }
rimage = { version = "0.11.0-next.3", default-features = false, features = ["mozjpeg", "oxipng", "resize", "threads", "webp"] }
tempfile = "3.13.0"
tokio = { version = "1.41.0", features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
num_cpus = "1.16.0"
pollster = "0.4.0"
infer = { version = "0.16.0", default-features = false, features = ["std"] }
sys-locale = "0.3.1"
zstd = "0.13.2"
async-trait = "0.1.83"
paste = "1.0.15"
axoupdater = { version = "0.8.1", default-features = false, features = ["github_releases", "tokio"], optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
mpris-server = "0.8.1"

# GitHub updated their macOS images and now skia doesn't build on Mac ARM anymore
[target.'cfg(all(target_os = "macos"))'.dependencies.slint]
version = "1.8.0"
default-features = false
features = ["renderer-femtovg"]

[target.'cfg(not(all(target_os = "macos")))'.dependencies.slint]
version = "1.8.0"
default-features = false
features = ["renderer-skia"]

[target.'cfg(target_os = "android")'.dependencies.slint]
version = "1.8.0"
default-features = false
features = ["backend-android-activity-06"]

[target.'cfg(target_os = "android")'.dependencies]
ndk-context = "0.1.1"
jni = "0.21.1"
once_cell = "1.20.2"

[target.'cfg(not(target_os = "android"))'.dependencies]
rfd = "0.15.0"
directories = "5.0.1"
async-channel = "2.3.1"
open = "5.3.0"
arboard = "3.4.1"

[features]
default = ["updater"]
updater = ["axoupdater"]